--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,37 +7,97 @@
     <meta name="author" content="Pirate Chain" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#151326" />
+    
     {% comment %} Help protect pages being classed as duplicate content {% endcomment %}
     {% if site.url == "https://arrrmada.com" %}
-    <meta name="robots" content="index, follow" />
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
     {% else %}
     <meta name="robots" content="index, nofollow" />
     {% endif %}
-
+    
     <!--Open Graph Tags-->
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="{{ site.title }}">
-    <meta property="og:description" content="{{ site.description }}" />
-    <meta property="og:url" content="{{ site.baseurl }}" />
+    <meta property="og:title" content="{{ page.title | default: site.title }}">
+    <meta property="og:description" content="{{ page.description | default: site.description }}" />
+    <meta property="og:url" content="{{ site.url }}{{ page.url }}" />
     <meta property="og:site_name" content="ARRRmada" />
-    <meta property="og:image" content="{{ site.baseurl }}/assets/img/site/arrrmada.jpg" />
+    <meta property="og:image" content="{{ site.url }}/assets/img/site/arrrmada.jpg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:image:type" content="image/jpeg" />
-
+    <meta property="og:image:alt" content="ARRRmada - Pirate Chain Merchant Directory" />
+    
     <!--Twitter Card Tags-->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@PirateARRRmada" />
-    <meta name="twitter:description" content="{{ site.description }}" />
-    <meta name="twitter:title" content="{{ site.title }}" />
-    <meta name="twitter:image" content="{{ site.baseurl }}/assets/img/site/arrrmada.jpg" />
-
+    <meta name="twitter:creator" content="@PirateChain" />
+    <meta name="twitter:description" content="{{ page.description | default: site.description }}" />
+    <meta name="twitter:title" content="{{ page.title | default: site.title }}" />
+    <meta name="twitter:image" content="{{ site.url }}/assets/img/site/arrrmada.jpg" />
+    <meta name="twitter:image:alt" content="ARRRmada Directory" />
+    
     <!--Link Tags-->
     <link rel="canonical" href="https://arrrmada.com{{ page.permalink | default: page.url }}" />
     <link rel="icon" href="{{ site.baseurl }}/assets/img/site/Pirate_Logo_Ship_Gold.svg" sizes="any" type="image/svg+xml" />
+    
+    <!-- Preconnect for Performance -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
+    
+    <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/global.css" />
     {% include links.html %}
-    <script type="text/javascript" src="{{ site.baseurl }}/assets/js/global.js"></script>
-    <script>window.siteBaseurl = '{{ site.baseurl }}';window.url = '{{ site.url }}';</script>    
+    
+    <!-- JavaScript -->
+    <script type="text/javascript" src="{{ site.baseurl }}/assets/js/global.js" defer></script>
+    <script>window.siteBaseurl = '{{ site.baseurl }}';window.url = '{{ site.url }}';</script>
+    
+    <!-- Structured Data (JSON-LD) for SEO -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "ARRRmada",
+      "alternateName": "ARRRmada Directory",
+      "url": "{{ site.url }}",
+      "description": "{{ site.description }}",
+      "potentialAction": {
+        "@type": "SearchAction",
+        "target": {
+          "@type": "EntryPoint",
+          "urlTemplate": "{{ site.url }}/#merchants-section?search={search_term_string}"
+        },
+        "query-input": "required name=search_term_string"
+      }
+    }
+    </script>
+    
+    {% if page.url == "/" or page.url == "/index.html" %}
+    <!-- ItemList Structured Data for Merchants -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "ItemList",
+      "name": "Pirate Chain Merchants",
+      "description": "Directory of merchants accepting Pirate Chain (ARRR) cryptocurrency",
+      "numberOfItems": {{ site.data.merchants.size }},
+      "itemListElement": [
+        {% for merchant in site.data.merchants limit:50 %}
+        {
+          "@type": "ListItem",
+          "position": {{ forloop.index }},
+          "item": {
+            "@type": "Organization",
+            "name": "{{ merchant.name }}",
+            "description": "{{ merchant.description | truncate: 160 }}",
+            "url": "{{ merchant.url }}"{% if merchant.image %},
+            "image": "{{ site.url }}/assets/img/merchants/{{ merchant.image }}"{% endif %}
+          }
+        }{% unless forloop.last %},{% endunless %}
+        {% endfor %}
+      ]
+    }
+    </script>
+    {% endif %}
+    
   </head>
