Fix GitHub repo link in footer - use direct URL

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -29,7 +29,7 @@
         <a href="{{ site.baseurl }}/donation_buttons" class="footer-link">
           🎁 Donation Buttons
         </a>
-        <a href="{{ site.readme }}" target="_blank" rel="noopener noreferrer" class="footer-link">
+        <a href="https://github.com/ARRRmada/ARRRmada.com" target="_blank" rel="noopener noreferrer" class="footer-link">
           📜 GitHub Repository
         </a>
       </div>
@@ -58,7 +58,7 @@
       <div class="footer-divider"></div>
       <p class="copyright">
         © {{ 'now' | date: "%Y" }} ARRRmada.com | 
-        <a href="{{ site.readme }}" target="_blank" rel="noopener noreferrer">Open Source</a> | 
+        <a href="https://github.com/ARRRmada/ARRRmada.com" target="_blank" rel="noopener noreferrer">Open Source</a> | 
         Built with ☠️ by the Pirate Chain Community
       </p>
       <p class="footer-tagline">"In crypto we trust, in privacy we sail." 🏴‍☠️</p>
